# labo2-h26

./: .gitignore  UTILISATION_IA.txt  index.md
executables/: setr_tp2_daemonfuse  setr_tp2_serveurcurl
src/daemonFuse/: CMakeLists.txt  communications.c  debug.h  fstools.c  fstools.h  setrfs.c  subject.html  syncAndStartGDB.sh
src/serveurCurl/: actions.c  servermain.c
